--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+
     <!-- Page Content-->
     <video autoplay muted loop id="vidBG">
         <source src="./assets/img/vid-bg.mov" type="video/mp4">
@@ -28,6 +29,14 @@
         <div class="nav-bar">
             <img src="./assets/img/cc-logo.png" alt="" class="cc-logo">
             <span class="logo-text">Conscious Cups</span>
+
+            <audio id="player" loop>
+                <source src="./assets/sound/water.m4a" type="audio/mp4">
+            </audio>
+
+        </div>
+        <div class="sound-ctrl"> <a id="mute-btn"> <i class="fa-solid fa-3x fa-volume-high"></i></a>
+            <a id="unmute-btn"> <i class="fa-solid fa-3x fa-volume-xmark"></i></a>
         </div>
         <svg class="blur" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%">
             <!-- <image filter="url(#filter2)" xlink:href="https://images.pexels.com/photos/249798/pexels-photo-249798.png" width="100%" height="100%"></image> -->
@@ -42,16 +51,16 @@
         <div class="btn-join">Join</div>
         <div class="social-container">
             <div class="social-btn btn1">
-                <a href="https://discord.gg/cb6Mdp7T">
+                <a href="https://discord.gg/cb6Mdp7T" target="_blank">
                     <i class="fa-brands fa-discord fa-4x discord"></i> </a>
             </div>
             <div class="social-btn btn2">
-                <a href="https://twitter.com/ConsciousCups?s=20&t=r0R57NSpBVyFNH5c_C8fRw">
+                <a href="https://twitter.com/ConsciousCups?s=20&t=r0R57NSpBVyFNH5c_C8fRw" target="_blank">
                     <i class="fa-brands fa-twitter fa-4x twitter"></i> </a>
                 </a>
             </div>
             <div class="social-btn btn3">
-                <a href="https://www.instagram.com/consciouscupsnft/">
+                <a href="https://www.instagram.com/consciouscupsnft/" target="_blank">
                     <i class="fa-brands fa-instagram fa-4x instagram"></i> </a>
                 </a>
             </div>
