--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
                 </a>
             </div>
         </div>
+        <div class="social-container-mobile">
+            <a href="https://discord.gg/cb6Mdp7T" target="_blank">
+                <i class="fa-brands fa-discord fa-4x discord"></i></a>
+            <a href="https://twitter.com/ConsciousCups?s=20&t=r0R57NSpBVyFNH5c_C8fRw" target="_blank" class="middle-btn-mobile">
+                <i class="fa-brands fa-twitter fa-4x twitter"></i></a>
+            </a>
+            <a href="https://www.instagram.com/consciouscupsnft/" target="_blank">
+                <i class="fa-brands fa-instagram fa-4x instagram"></i></a>
+            </a>
+        </div>
     </div>
 
     <!-- Core theme JS-->
