--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
         </div>
 
     </div>
+    <div class="video-contain">
+        <video autoplay muted loop id="vidBG">
+            <source src="./assets/img/vid-bg.mp4" type="video/mp4">
+        </video>
+    </div>
 
-    <video autoplay muted loop id="vidBG">
-        <source src="./assets/img/vid-bg.mov" type="video/mp4">
-    </video>
     <div class="pic">
         <!-- Page Content-->
         <div class="sound-ctrl-mobile"> <a id="mute-btn-mobile" class="mute-btn"> <i
