--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
         </div>
         <div class="social-container-mobile">
-            <a href="https://discord.gg/cb6Mdp7T" target="_blank">
+            <a href="https://discord.com/invite/RvjrYJxd" target="_blank">
                 <i class="fa-brands fa-discord fa-3x discord"></i></a>
             <a href="https://twitter.com/ConsciousCups?s=20&t=r0R57NSpBVyFNH5c_C8fRw" target="_blank"
                 class="middle-btn-mobile">
