--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     </div>
     <div class="video-contain">
-        <video autoplay muted loop id="vidBG">
+        <video autoplay="autoplay" muted loop id="vidBG">
             <source src="./assets/img/vid-bg.mp4" type="video/mp4">
         </video>
     </div>
