--- a/index.html
+++ b/index.html
@@ -86,11 +86,9 @@
         </div>
 
     </div>
-    <div class="video-contain">
-        <video autoplay="autoplay" muted loop id="vidBG">
-            <source src="./assets/img/vid-bg.mp4" type="video/mp4">
-        </video>
-    </div>
+    <video autoplay="autoplay" muted loop id="vidBG">
+        <source src="./assets/img/vid-bg.mp4" type="video/mp4">
+    </video>
 
     <div class="pic">
         <!-- Page Content-->
@@ -125,7 +123,7 @@
         <div id="btnJoin" class="btn-join">Join</div>
         <div class="social-container" id="socialContainer">
             <div class="social-btn btn1">
-                <a href="https://discord.gg/cb6Mdp7T" target="_blank">
+                <a href="https://discord.gg/RvjrYJxd" target="_blank">
                     <i class="fa-brands fa-discord fa-3x discord" id="discord"></i> </a>
             </div>
             <div class="social-btn btn2">
@@ -141,7 +139,7 @@
 
         </div>
         <div class="social-container-mobile">
-            <a href="https://discord.gg/cb6Mdp7T" target="_blank">
+            <a href="https://discord.gg/RvjrYJxd" target="_blank">
                 <i class="fa-brands fa-discord fa-3x discord"></i></a>
             <a href="https://twitter.com/ConsciousCups?s=20&t=r0R57NSpBVyFNH5c_C8fRw" target="_blank"
                 class="middle-btn-mobile">
