--- a/index.html
+++ b/index.html
@@ -86,9 +86,21 @@
         </div>
 
     </div>
-    <video autoplay="autoplay" muted loop id="vidBG">
+    <!-- <video autoplay="autoplay" muted loop id="vidBG">
         <source src="./assets/img/vid-bg.mp4" type="video/mp4">
-    </video>
+    </video> -->
+
+    <header class="video-header-with-type">
+        <div class="background-video-wrapper">
+            <div class="background-video-inset">
+                <iframe src='https://player.vimeo.com/video/697100253?background=1&muted=1&autoplay=1&loop=1'
+                    frameborder='0' allow='autoplay; encrypted-media;'></iframe>
+            </div>
+        </div>
+    </header>
+
+
+
 
     <div class="pic">
         <!-- Page Content-->
