--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <header class="video-header-with-type">
         <div class="background-video-wrapper">
             <div class="background-video-inset">
-                <iframe src='https://player.vimeo.com/video/697100253?background=1&muted=1&autoplay=1&loop=1'
+                <iframe src='https://player.vimeo.com/video/697100253?background=1&autoplay=1&loop=1'
                     frameborder='0' allow='autoplay; encrypted-media;'></iframe>
             </div>
         </div>
