--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div id="btnJoin" class="btn-join">Join</div>
         <div class="social-container" id="socialContainer">
             <div class="social-btn btn1">
-                <a href="https://discord.gg/RvjrYJxd" target="_blank">
+                <a href="https://discord.gg/eKSxT46Z4n" target="_blank">
                     <i class="fa-brands fa-discord fa-3x discord" id="discord"></i> </a>
             </div>
             <div class="social-btn btn2">
@@ -151,7 +151,7 @@
 
         </div>
         <div class="social-container-mobile">
-            <a href="https://discord.gg/RvjrYJxd" target="_blank">
+            <a href="https://discord.gg/eKSxT46Z4n" target="_blank">
                 <i class="fa-brands fa-discord fa-3x discord"></i></a>
             <a href="https://twitter.com/ConsciousCups?s=20&t=r0R57NSpBVyFNH5c_C8fRw" target="_blank"
                 class="middle-btn-mobile">
