--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         </div>
 
-        <svg class="blur" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%">
+        <svg id="blurOverlay" class="blur" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%">
             <!-- <image filter="url(#filter2)" xlink:href="https://images.pexels.com/photos/249798/pexels-photo-249798.png" width="100%" height="100%"></image> -->
             <filter id="filter2">
                 <fegaussianblur stdDeviation="5" />
