add back in static vid

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <!-- <video autoplay="autoplay" muted loop id="vidBG">
         <source src="./assets/img/vid-bg.mp4" type="video/mp4">
     </video> -->
-
+<!-- 
     <header class="video-header-with-type">
         <div class="background-video-wrapper">
             <div class="background-video-inset">
@@ -97,9 +97,13 @@
                     frameborder='0' allow='autoplay; encrypted-media;'></iframe>
             </div>
         </div>
-    </header>
+    </header> -->
 
-
+    <div class="home-bg-vid" id="vidContainer">
+        <video class="home-bg-vid" autoplay loop muted playsinline>
+            <source src="./assets/img/vid-bg.mp4">
+        </video>
+    </div>
 
 
     <div class="pic">
