--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
             <div class="sound-ctrl"> <a id="mute-btn"> <i class="fa-solid fa-3x fa-volume-high"></i></a>
                 <a id="unmute-btn"> <i class="fa-solid fa-3x fa-volume-xmark"></i></a>
             </div>
-            <div class="search-ctrl"> <a id="spotlight-btn"> <i class="fa-solid fa-3x fa-magnifying-glass"></i></a>
+            <div class="search-ctrl"> <a id="spotlight-btn"> <i class="fa-solid slightly-smaller-icon fa-magnifying-glass"></i></a>
                 <a id="dis-spotlight-btn">
-                    <div class="cross-line"></div> <i class="fa-solid fa-3x fa-magnifying-glass"></i>
+                    <div class="cross-line"></div> <i class="fa-solid slightly-smaller-icon fa-magnifying-glass"></i>
                 </a>
             </div>
 
