--- a/index.html
+++ b/index.html
@@ -124,18 +124,19 @@
 
     <div class="pic">
         <!-- Page Content-->
-        <div class="sound-ctrl-mobile"> <a id="mute-btn-mobile" class="mute-btn"> <i
+        <div class="sound-ctrl-mobile grad-shadow-5"> <a id="mute-btn-mobile" class="mute-btn"> <i
                     class="fa-solid fa-2x fa-volume-high"></i></a>
             <a id="unmute-btn-mobile" class="unmute-btn"> <i class="fa-solid fa-2x fa-volume-xmark"></i></a>
         </div>
 
         <div class="nav-bar">
             <img src="./assets/img/cc-logo.png" alt="" class="cc-logo">
-            <span class="logo-text">Conscious Cups</span>
-            <div class="sound-ctrl"> <a id="mute-btn"> <i class="fa-solid fa-3x fa-volume-high"></i></a>
+            <span class="logo-text"><span class="grad-shadow-1">Con</span><span class="grad-bridge-1">s</span><span class="grad-shadow-2">ci</span><span class="grad-bridge-2">o</span><span class="grad-shadow-3">us </span><span class="grad-bridge-3">C</span><span class="grad-shadow-4">ups </span></span>
+            <!-- <span class="logo-text">Conscious Cups</span> -->
+            <div class="sound-ctrl grad-shadow-5"> <a id="mute-btn"> <i class="fa-solid fa-3x fa-volume-high"></i></a>
                 <a id="unmute-btn"> <i class="fa-solid fa-3x fa-volume-xmark"></i></a>
             </div>
-            <div class="search-ctrl"> <a id="spotlight-btn"> <i class="fa-solid slightly-smaller-icon fa-magnifying-glass"></i></a>
+            <div class="search-ctrl grad-shadow-5"> <a id="spotlight-btn"> <i class="fa-solid slightly-smaller-icon fa-magnifying-glass"></i></a>
                 <a id="dis-spotlight-btn">
                     <div class="cross-line"></div> <i class="fa-solid slightly-smaller-icon fa-magnifying-glass"></i>
                 </a>
