--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
                     <div class="cross-line"></div> <i class="fa-solid slightly-smaller-icon fa-magnifying-glass"></i>
                 </a>
             </div>
+            <!-- <div class="shop grad-shadow-5"><a href="./shop.html" class="shop-link">SHOP</a>
+                </div> -->
 
             <audio id="player" loop>
                 <source src="./assets/sound/water.m4a" type="audio/mp4">
