--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     class="fa-solid fa-2x fa-volume-high"></i></a>
             <a id="unmute-btn-mobile" class="unmute-btn"> <i class="fa-solid fa-2x fa-volume-xmark"></i></a>
         </div>
-        <div class="shop-btn grad-shadow-5"> <a href="./shop.html"> <i class="fa-solid fa-2x fa-shop"></i></a>
+        <div class="shop-btn grad-shadow-5"> <a href="./shop.html"> <i class="fa-solid fa-2x fa-bag-shopping"></i></a>
         </div>
 
         <div class="nav-bar">
