--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
         </div>
         <div class="shop-btn grad-shadow-5"> <a href="./shop.html"> <i class="fa-solid fa-2x fa-bag-shopping"></i></a>
         </div>
+        <div class="art-btn grad-shadow-5"> <a href="./art.html"> <i class="fa-solid fa-2x fa-paintbrush"></i></a>
+        </div>
 
         <div class="nav-bar">
             <a href="./index.html" class="home-link">
@@ -170,7 +172,7 @@
             <mask id="mask1">
                 <circle cx="-50%" cy="-50%" r="12%" fill="white" filter="url(#filter2)" id="maskCircle" />
             </mask>
-            <image xlink:href="./assets/img/draw-bg-2.jpeg" mask="url(#mask1)" id="under-img"></image>
+            <image xlink:href="./assets/img/draw-bg-2.png" mask="url(#mask1)" id="under-img"></image>
         </svg>
         <div id="btnJoin" class="btn-join">Join</div>
         <div class="social-container" id="socialContainer">
