--- a/shop.html
+++ b/shop.html
@@ -44,6 +44,10 @@
         <div class="sound-ctrl grad-shadow-5"> <a id="mute-btn2"> <i class="fa-solid fa-3x fa-volume-high"></i></a>
             <a id="unmute-btn2"> <i class="fa-solid fa-3x fa-volume-xmark"></i></a>
         </div>
+        <div class="margin-auto"></div>
+        <div class="justify-self-end mr-30 design-btn">
+            <button onclick="goToLink('https://www.projectwaterfall.org/')">Donate to Project Waterfall</button>
+        </div>
 
     </div>
     <div class="home-bg-vid shop-vid" id="vidContainer">
@@ -52,12 +56,7 @@
         </video>
     </div>
     <div class="container product-grid">
-        <div class="row">
-            <div class="col"></div>
-            <div class="col">
-            </div>
-            <div class="col"></div>
-        </div>
+
         <div class="row full-page justify-content-center">
             <div class="col-lg-4 col-md-6 align-items-center product-wrap flip-container justify-content-center">
                 <div class="product-box text-center justify-content-center flipper">
@@ -75,8 +74,9 @@
                             veteran-owned small business.
                         </div>
                         <div class="sub-filler"></div>
-                        <div class="product-text text-center"><button onclick="goToLink('https://tacubacoffeeco.com/')"
-                                class="code-btn">Go to Site</button></div>
+                        <div class="product-text text-center card-buttons"><button
+                                onclick="goToLink('https://tacubacoffeeco.com/')" class="code-btn">Go to Site</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -95,9 +95,10 @@
                             Tenzo Matcha is 100 % USDA Organic, Kosher, Paleo, and Vegan! They work directly with
                             farmers in Kagoshima, Japan.
                         </div>
-                        <div class="sub-filler"></div>
-                        <div class="product-text text-center"><button onclick="goToLink('http://tenzo.com/')"
-                                class="code-btn">Go to Site</button></div>
+                        <div class="product-subtitle">Code: consciouscups for 20% off</div>
+                        <div class="product-text text-center card-buttons"><button onclick="copy('consciouscups', this)"
+                                class="code-btn">Copy Code <i class="fa-regular fa-copy"></i></button><button
+                                onclick="goToLink('http://tenzotea.co/')" class="code-btn">Go to Site</button></div>
                     </div>
                 </div>
             </div>
@@ -112,10 +113,14 @@
                     <div class="product-back back">
                         <div class="product-title smaller"><img class="product-img" height="80px"
                                 src="./assets/img/products/Bucket-Hat.png" alt="">Conscious Bucket</div>
+                                <div class="sub-filler"></div>
+
 
                         <div class="product-text">Get on the waitlist for our first merch drop coming soon!</div>
                         <div class="sub-filler"></div>
-                        <div class="product-text text-center"><button
+                        <div class="sub-filler"></div>
+
+                        <div class="product-text text-center card-buttons"><button
                                 onclick="goToLink('https://docs.google.com/forms/d/1iGqKbKddwqh4Ro6pwcRrI3q048lyq-OhyjSJ3mfs_FM/viewform?edit_requested=true')"
                                 class="code-btn">Waitlist Here</button></div>
                     </div>
@@ -137,8 +142,8 @@
                             wheatgrass yerba-mate.
                         </div>
                         <div class="sub-filler"></div>
-                        <div class="product-text text-center"><button onclick="goToLink('https://livingmaka.com/')"
-                                class="code-btn">Go to Site</button></div>
+                        <div class="product-text text-center card-buttons"><button
+                                onclick="goToLink('https://livingmaka.com/')" class="code-btn">Go to Site</button></div>
                     </div>
                 </div>
             </div>
@@ -154,12 +159,14 @@
                         <div class="product-title smaller"><img class="product-img" height="80px"
                                 src="./assets/img/products/Psychedelic-Water.png" alt="">Psychedelic Water</div>
                         <div class="product-text">
-                            HOP WTR is a non-alcoholic sparkling hop water crafted with bold hops and mood-boosting
-                            ingredients.
+                            Made with kava root, damiana leaf and green tea leaf extract, Psychedelic Water creates a
+                            sense of euphoria perfect for work and play.
                         </div>
-                        <div class="sub-filler"></div>
-                        <div class="product-text text-center"><button
-                                onclick="goToLink('https://psychedelicwater.com/')" class="code-btn">Go to Site</button>
+                        <div class="product-subtitle">Code: consciouscups15 for 15% off</div>
+                        <div class="product-text text-center card-buttons"><button
+                                onclick="copy('consciouscups15', this)" class="code-btn">Copy Code <i
+                                    class="fa-regular fa-copy"></i></button><button
+                                onclick="goToLink('http://psychedlicwater.com/')" class="code-btn">Go to Site</button>
                         </div>
                     </div>
                 </div>
@@ -180,7 +187,7 @@
                             the Meatpacking District of NYC!
                         </div>
                         <div class="product-subtitle">Code: consciouscups for 15% off</div>
-                        <div class="product-text text-center"><button onclick="copy('consciouscups', this)"
+                        <div class="product-text text-center card-buttons"><button onclick="copy('consciouscups', this)"
                                 class="code-btn">Copy Code <i class="fa-regular fa-copy"></i></button><button
                                 onclick="goToLink('https://www.kobricks.com/')" class="code-btn">Go to Site</button>
                         </div>
@@ -203,7 +210,7 @@
                             espresso.
                         </div>
                         <div class="product-subtitle">Code: CONSCIOUS10 for 10% off</div>
-                        <div class="product-text text-center"><button onclick="copy('CONSCIOUS10', this)"
+                        <div class="product-text text-center card-buttons"><button onclick="copy('CONSCIOUS10', this)"
                                 class="code-btn">Copy Code <i class="fa-regular fa-copy"></i></button><button
                                 onclick="goToLink('https://www.chattymatcha.com/')" class="code-btn">Go to Site</button>
                         </div>
@@ -226,7 +233,7 @@
                             functional botanicals to elevate your mood.
                         </div>
                         <div class="product-subtitle">Code: CONSCIOUS20 for 20% off</div>
-                        <div class="product-text text-center"><button onclick="copy('CONSCIOUS20', this)"
+                        <div class="product-text text-center card-buttons"><button onclick="copy('CONSCIOUS20', this)"
                                 class="code-btn">Copy Code <i class="fa-regular fa-copy"></i></button><button
                                 onclick="goToLink('https://drinkhiyo.com/')" class="code-btn">Go to Site</button></div>
                     </div>
@@ -248,9 +255,10 @@
                             improve well-being and help you unwind.
                         </div>
                         <div class="product-subtitle">Code: CONSCIOUSCUPS for 25% off</div>
-                        <div class="product-text text-center"><button onclick="copy('CONSCIOUSCUPS', this)"
+                        <div class="product-text text-center card-buttons"><button onclick="copy('CONSCIOUSCUPS', this)"
                                 class="code-btn">Copy Code <i class="fa-regular fa-copy"></i></button><button
-                                onclick="goToLink('https://drinkhiyo.com/')" class="code-btn">Go to Site</button></div>
+                                onclick="goToLink('https://https://unitywellness.co/')" class="code-btn">Go to
+                                Site</button></div>
                     </div>
                 </div>
             </div>
@@ -259,7 +267,7 @@
                     <div class="front">
                         <div class="product-img-wrap text-center"><img class="product-img"
                                 src="./assets/img/products/St-Hildies.png" alt=""></div>
-                        <div class="product-title text-center">St.Hildies</div>
+                        <div class="product-title text-center">St. Hildies</div>
                         <div class="product-subtitle text-center">Botanical Spiked Seltzer</div>
                     </div>
                     <div class="product-back back">
@@ -270,8 +278,9 @@
                             magic for wellness-minded imbibers.
                         </div>
                         <div class="product-subtitle">Code: CONSCIOUSCUPS20 for 20% off</div>
-                        <div class="product-text text-center"><button onclick="copy('CONSCIOUSCUPS20', this)"
-                                class="code-btn">Copy Code <i class="fa-regular fa-copy"></i></button><button
+                        <div class="product-text text-center card-buttons"><button
+                                onclick="copy('CONSCIOUSCUPS20', this)" class="code-btn">Copy Code <i
+                                    class="fa-regular fa-copy"></i></button><button
                                 onclick="goToLink('https://sthildies.com/')" class="code-btn">Go to Site</button></div>
                     </div>
                 </div>
@@ -292,7 +301,7 @@
                             creative and productive self each day.
                         </div>
                         <div class="product-subtitle">Code: consciouscups for 15% off</div>
-                        <div class="product-text text-center"><button onclick="copy('consciouscups', this)"
+                        <div class="product-text text-center card-buttons"><button onclick="copy('consciouscups', this)"
                                 class="code-btn">Copy Code <i class="fa-regular fa-copy"></i></button><button
                                 onclick="goToLink('https://leisureproject.co/')" class="code-btn">Go to Site</button>
                         </div>
@@ -315,9 +324,9 @@
                             ingredients.
                         </div>
                         <div class="product-subtitle">Code: consciouscups for 20% off</div>
-                        <div class="product-text text-center"><button onclick="copy('consciouscups', this)"
+                        <div class="product-text text-center card-buttons"><button onclick="copy('consciouscups', this)"
                                 class="code-btn">Copy Code <i class="fa-regular fa-copy"></i></button><button
-                                onclick="goToLink('https://leisureproject.co/')" class="code-btn">Go to Site</button>
+                                onclick="goToLink('https://hopwtr.com/')" class="code-btn">Go to Site</button>
                         </div>
                     </div>
                 </div>
@@ -338,8 +347,8 @@
                             for celebrating a day well-lived.
                         </div>
                         <div class="sub-filler"></div>
-                        <div class="product-text text-center"><button onclick="goToLink('https://lunabaybooch.com/')"
-                                class="code-btn">Go to Site</button>
+                        <div class="product-text text-center card-buttons"><button
+                                onclick="goToLink('https://lunabaybooch.com/')" class="code-btn">Go to Site</button>
                         </div>
                     </div>
                 </div>
@@ -359,14 +368,40 @@
                             The first flavored kratom powder on the market. No sugar, no additives, and no extract. Just
                             the raw leaf with a tasty flavor profile.
                         </div>
-                        <div class="sub-filler"></div>
-                        <div class="product-text text-center"><button onclick="goToLink('https://www.krabot.com/')"
-                                class="code-btn">Go to Site</button>
-                        </div>
+                        <div class="product-subtitle">Code: cups15 for 15% off</div>
+                        <div class="product-text text-center card-buttons"><button onclick="copy('cups15', this)"
+                                class="code-btn">Copy Code <i class="fa-regular fa-copy"></i></button><button
+                                onclick="goToLink('http://www.krabot.com/')" class="code-btn">Go to Site</button></div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 align-items-center product-wrap justify-content-center">
+            <div class="col-lg-4 col-md-6 align-items-center product-wrap flip-container justify-content-center">
+                <div class="product-box text-center justify-content-center flipper">
+                    <div class="front">
+
+                        <div class="product-title text-center pt-center">Suggest a Product!</div>
+                    </div>
+                    <div class="product-back back">
+                        <div class="sub-filler"></div>
+                        <div class="sub-filler"></div>
+
+
+                        <div class="product-title">Suggest a Product</div>
+
+                        <div class="product-text">We want to hear from you!
+                            <br><br>
+                            Please share the names of any of your favorite conscious products, not limited to beverages!
+
+                        </div>
+                        <div class="sub-filler"></div>
+
+                        <div class="product-text text-center card-buttons"><button
+                                onclick="goToLink('https://docs.google.com/forms/d/e/1FAIpQLSe4_33GspfTCYwh08JVfIqHxw25s5y2dVyolKj-qPHTjehYfw/viewform')"
+                                class="code-btn">Suggest Here</button></div>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="col-lg-4 col-md-6 align-items-center product-wrap justify-content-center">
                 <a class="product-link"
                     href="https://docs.google.com/forms/d/e/1FAIpQLSe4_33GspfTCYwh08JVfIqHxw25s5y2dVyolKj-qPHTjehYfw/viewform">
                     <div class="product-box text-center justify-content-center ">
@@ -375,7 +410,7 @@
                         </div>
                     </div>
                 </a>
-            </div>
+            </div> -->
         </div>
     </div>
     <script>
@@ -392,11 +427,18 @@
         }
 
         function goToLink(link) {
-            location.href = link
+            window.open(
+                link,
+                '_blank'
+            );
         }
     </script>
     <script>var firstMute2 = true;
         var player2 = document.getElementById("player2")
+        if (!player2.paused) {
+            $('#unmute-btn2').hide();
+            $('#mute-btn2').show();
+        }
         $('#unmute-btn2').click(function () {
             if (firstMute2) {
                 player2.play();
