--- a/shop.html
+++ b/shop.html
@@ -106,13 +106,13 @@
                 <div class="product-box text-center justify-content-center flipper">
                     <div class="front">
                         <div class="product-img-wrap text-center"><img class="product-img"
-                                src="./assets/img/products/Bucket-Hat.png" alt=""></div>
+                                src="./assets/img/products/Bucket-Hat.jpeg" alt=""></div>
                         <div class="product-title text-center">Conscious Bucket</div>
                         <div class="product-subtitle text-center">Get on the Waitlist</div>
                     </div>
                     <div class="product-back back">
                         <div class="product-title smaller"><img class="product-img" height="80px"
-                                src="./assets/img/products/Bucket-Hat.png" alt="">Conscious Bucket</div>
+                                src="./assets/img/products/Bucket-Hat.jpeg" alt="">Conscious Bucket</div>
                                 <div class="sub-filler"></div>
 
 
