--- a/art.html
+++ b/art.html
@@ -54,6 +54,10 @@
                 onclick="function(){location.href = 'https://docs.google.com/forms/d/1bMuBJzeuJtotC3DcSO706fPOWCdl2AqsM10i0Rc1lPc/viewform?edit_requested=true'}">Design
                 a Custom Cup</button>
         </div>
+        <div class="row justify-content-center ">
+            <div class="header-text text-center">Cups on Display Custom Made for Early Conscious Cups Community
+                Members</div>
+    </div>
         <div class="row justify-content-center">
             <div class="col-md-4  art-col">
                 <div class="art-wrap"><img class="art-img" src="./assets/img/art/7.png" alt=""></div>
