google analytics tag

--- a/art.html
+++ b/art.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DSJMZHP9Z0"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-DSJMZHP9Z0');
+    </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
@@ -57,7 +66,7 @@
         <div class="row justify-content-center ">
             <div class="header-text text-center">Cups on Display Custom Made for Early Conscious Cups Community
                 Members</div>
-    </div>
+        </div>
         <div class="row justify-content-center">
             <div class="col-md-4  art-col">
                 <div class="art-wrap"><img class="art-img" src="./assets/img/art/7.png" alt=""></div>
