--- a/shop.html
+++ b/shop.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DSJMZHP9Z0"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-DSJMZHP9Z0');
+    </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
@@ -113,7 +122,7 @@
                     <div class="product-back back">
                         <div class="product-title smaller"><img class="product-img" height="80px"
                                 src="./assets/img/products/Bucket-Hat.jpeg" alt="">Conscious Bucket</div>
-                                <div class="sub-filler"></div>
+                        <div class="sub-filler"></div>
 
 
                         <div class="product-text">Get on the waitlist for our first merch drop coming soon!</div>
