--- a/art.html
+++ b/art.html
@@ -46,10 +46,10 @@
         <div class="margin-auto"></div>
         <div class="justify-self-end mr-30 design-btn">
             <button
-                onclick="function(){goToLink('https://docs.google.com/forms/d/1bMuBJzeuJtotC3DcSO706fPOWCdl2AqsM10i0Rc1lPc/viewform?edit_requested=true')}">Design
+                onclick="goToLink('https://docs.google.com/forms/d/1bMuBJzeuJtotC3DcSO706fPOWCdl2AqsM10i0Rc1lPc/viewform?edit_requested=true')">Design
                 a Custom Cup</button>
         </div>
-        <div class="home-bg-vid shop-vid" id="vidContainer">
+        <div class="home-bg-vid art-vid" id="vidContainer">
             <video id="vidItself" class="home-bg-vid" autoplay loop muted playsinline>
                 <source src="./assets/img/art-bg.mp4">
             </video>
